# server

./: .env  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
apps/account/migrations/: 0001_initial.py  0002_adminprofile_customerprofile.py
apps/account/models/: __init__.py  profiles.py  user.py
apps/generics/: models.py
apps/generics/validators/: character_validators.py
config/: celery.py  settings.py
config/settings/: base.py  production.py
scripts/: run_develop.sh  run_tests.sh  wait-for-db.sh
